--- a/localisation/english/traits_l_english.yml
+++ b/localisation/english/traits_l_english.yml
@@ -340,6 +340,7 @@
  general_secretary: "the General Secretary"
  shahanshah: "Shahanshah Aryamehr"
  transparent: "Transparent Leader"
+ his_excellency: "His Excellency\nFounder of Peace and National Unity\nLeader of the Nation"
  leader_of_arab_world: "Leader of the Arab World"
  educator: "Educator"
  protector_of_german_culture: "Protector of German Identity"
