--- a/localisation/english/MD_opinion_modifiers_l_english.yml
+++ b/localisation/english/MD_opinion_modifiers_l_english.yml
@@ -356,6 +356,9 @@
  shares_currency: "Shares Currency"
  mutual_trade_agreement: "Mutual Trade Agreement"
  mutual_trade_opinion: "Trade Agreement"
+ mutual_investment_treaty_opinion: "Signed a Mutual Investment Treaty"
+ mutual_investment_treaty_trade_opinion: "Signed a Mutual Investment Treaty"
+ broke_mutual_investment_treaty: "Broke Mutual Investment Treaty"
  broke_trade_agreement: "Broke Trade Agreement"
  insult: "Insulted our leader"
  drama: "Drama"
