--- a/localisation/english/MD_focus_IND_l_english.yml
+++ b/localisation/english/MD_focus_IND_l_english.yml
@@ -856,13 +856,13 @@
  IND_papua_generic3: "Fortify Churches"
  ##
  IND_back_noone: "Backing No One"
- IND_back_noone_desc: "It is important that the state does pick favorites over sensitive matters, such as that of religious conflict. We must begin the process of easing this tension, by both negotiations and militarization of points of conflict. \n\nDoing this will bring more calm to the Sulawesiana and Papuans"
+ IND_back_noone_desc: "It is important that the state does pick favorites over sensitive matters, such as that of religious conflict. We must begin the process of easing this tension, by both negotiations and militarization of points of conflict. \n\nDoing this will bring more calm to the Sulawesians and Papuans"
  IND_neutral: "Hold unifying rallies in vary states"
  IND_neutral2: "Funds for new construction in Sulawesi"
  IND_neutral3: "Funds Papuan churches"
  IND_neutral4: "Promise Papuans better representation"
  IND_neutral5: "Promise Sulawesian better care"
- IND_neutral_generic: "Push enlistment programs for Papuans and Sulawesiana"
+ IND_neutral_generic: "Push enlistment programs for Papuans and Sulawesians"
  IND_neutral_generic2: "Militarize docks used for smuggling weapons"
  IND_neutral_generic3: "Militarize hotspots known for clashes"
  #DISASTER MECHANIC LOC
