--- a/localisation/english/MD_focus_IND_l_english.yml
+++ b/localisation/english/MD_focus_IND_l_english.yml
@@ -784,15 +784,13 @@
  IND_back_muslims_d: "Back the Muslims"
  IND_crushed_gang_culture: "Crushing Gang Culture"
  IND_equipped_police: "Militarized Police"
- IND_kemdikibud_1: "The Kemdikibud"
- IND_kemdikibud_2: "The Kemdikibud"
  IND_komnas_ham: "KOMNAS-HAM"
  IND_guerilla: "Experts in Guerilla Warfare"
  IND_rural_aid: "Rural Aid"
  IND_rural_aid_2: "Rural Aid"
  IND_rural_aid_3: "Rural Aid"
  IND_rural_aid_4: "Rural Aid"
- IND_network_improvement: "Network Improvments"
+ IND_network_improvement: "Network Improvements"
  IND_network_improvement_2: "Efficient Networks"
  IND_network_improvement_3: "Efficient Networks"
  IND_islamic_schools: "Islamic Policies"
