--- a/localisation/english/MD_focus_GRE_l_english.yml
+++ b/localisation/english/MD_focus_GRE_l_english.yml
@@ -150,13 +150,13 @@
  GRE_unable_to_gain_strength: "§HGreek-Cypriots§! will be §GUNABLE§! to gain strength for §H60 days§!"
  TUR_unable_to_gain_strength: "§HTurkish-Cypriots§! will be §GUNABLE§! to gain strength for §H60 days§!"
  GRE_south_-5_TT: "§HGreek-Cypriots§! §GLOSE§! §H5 strength!§!"
- GRE_north_5_TT: "§HTurkish Cypriots will §GGAIN§! 5 strength§!"
+ GRE_north_5_TT: "§HTurkish Cypriots§! will §GGAIN§! §H5 strength§!"
  GRE_north_-10_TT: "§HTurkish-Cypriots§! §RLOSE§! §H10§! strength!"
  GRE_south_-20_TT: "§HGreek-Cypriots§! will §GLOSE§! §H20§! strength!"
  GRE_gain_5_strength: "§HGreek-Cypriots§! will §GGAIN§! §H5 strength!§!"
  GRE_gain_20_strength: "§HGreek-Cypriots§! will §GGAIN§! §H20 strength!§!"
  TUR_gain_20_strength: "§HTurkish-Cypriots§! will §GGAIN§! §H20 strength!§!"
- GRE_turks_lose_5_strength: "§HTurkish-Cypriots will§! §RLOSE§! §H5 strength§!"
+ GRE_turks_lose_5_strength: "§HTurkish-Cypriots§! will §RLOSE§! §H5 strength§!"
  GRE_lose_20_gain_20: "§HTurkish-Cypriots will§! §GLOSE§! §H20 strength!§!"
  GRE_lose_20_gain_202: "§HGreek-Cypriots will§! §RLOSE§! §H20 strength!§!"
  GRE_brit_5_TT: "§GGain 5 British Support§!"
